fix(wsp): Bouton retour: Déplacer le bouton retour qui est près du scrollbar
FIX: MANTIS 0007590

--- a/plugins/mel_workspace/skins/elastic/workspaces.css
+++ b/plugins/mel_workspace/skins/elastic/workspaces.css
@@ -1031,12 +1031,6 @@ html.dark-mode .click-master{
     margin-bottom: 0;
 } 
 
-.task-workspace.action-action .joined .mel-button.plus.btn.btn-secondary{
-    position: absolute;
-    top: 45px;
-    right: 0px;  
-}
-
 html.layout-phone .task-workspace.action-workspace .responsiveTabList,
 html.layout-small .task-workspace.action-workspace .responsiveTabList {
     flex-wrap: wrap!important;
